[build-system]
requires = ['setuptools>=61.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = "insarhub"
dynamic= ["version"]
authors = [{name="jldz9", email="Jiaweiliwork@outlook.com"}]
description = "Hassle-free InSAR processing scripts for multiple satellites"
readme = 'README.md'
dependencies = [
"numpy<2.0",
"asf_search",
"cdsapi",
"colorama",
"contextily",
"dem_stitcher",
"hyp3_sdk",
"matplotlib",
"mintpy",
"panel>=1.4",
"param",
"rasterio>=1.4",
"sentineleof",
"tqdm",
]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.scripts]
insarhub = "insarhub.cli.main:main"
insarhub-app = "insarhub.app.main:serve"

[project.urls]
homepage = "https://jldz9.github.io/InSARHub"
repository = "https://github.com/jldz9/InSARHub"

[tool.setuptools.packages.find]
where = ['src']

[tool.setuptools.dynamic]
version = {attr = "insarhub._version.__version__"}
