[build-system]
requires = ['setuptools>=61.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = "insarhub"
dynamic= ["version"]
authors = [{name="jldz9", email="Jiaweiliwork@outlook.com"}]
description = "A modular Python framework for automated InSAR and time-series processing."
readme = 'README.md'
dependencies = [
"asf_search",
"cdsapi",
"colorama",
"contextily",
"dem_stitcher",
"hyp3_sdk",
"mintpy",
"rasterio>=1.4",
"sentineleof",
"fastapi",
"uvicorn",
"numpy<2.0",
]
requires-python = ">=3.11,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.scripts]
insarhub = "insarhub.cli.main:main"
insarhub-app = "insarhub.app.main:main"

[project.urls]
homepage = "https://jldz9.github.io/InSARHub"
repository = "https://github.com/jldz9/InSARHub"

[tool.setuptools.packages.find]
where = ['src']

[tool.setuptools.package-data]
"insarhub.app" = ["frontend/dist/**/*", "frontend/dist/index.html"]

[tool.setuptools.dynamic]
version = {attr = "insarhub._version.__version__"}
